--- a/app/src/main/res/layout/tab1contacts.xml
+++ b/app/src/main/res/layout/tab1contacts.xml
@@ -14,6 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"></ListView>
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
