--- a/app/src/main/res/layout/tab2gallery.xml
+++ b/app/src/main/res/layout/tab2gallery.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:id="@+id/btnNewImg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/addImg" />
