--- a/app/src/main/res/layout/tab3online.xml
+++ b/app/src/main/res/layout/tab3online.xml
@@ -14,4 +14,30 @@
         android:layout_height="wrap_content"
         android:text="Tab3 Online text"/>
 
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout
+        xmlns:sothree="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/sliding_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+
+        sothree:umanoPanelHeight="68dp"
+        sothree:umanoShadowHeight="4dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Main Content"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|top"
+                android:text="The Awesome Sliding Up Panel"
+                android:textSize="16sp" />
+
+        </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+
 </RelativeLayout>
