--- a/app/src/main/res/layout/content_add_contact.xml
+++ b/app/src/main/res/layout/content_add_contact.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.q.project1.AddContactActivity"
+    tools:context="com.example.q.project1.EditContactActivity"
     tools:showIn="@layout/activity_add_contact">
 
     <EditText
@@ -59,7 +59,7 @@
         android:layout_margin="0dp"
         android:layout_marginBottom="0dp"
         android:layout_marginTop="0dp"
-        android:text="SUBMIT"
+        android:text="SAVE"
         app:layout_constraintBottom_toBottomOf="@+id/cancel"
         app:layout_constraintLeft_toRightOf="@+id/cancel"
         app:layout_constraintRight_toRightOf="parent"
@@ -68,16 +68,16 @@
         style="?android:attr/borderlessButtonStyle"
         android:background="@color/greyButton"/>
 
-    <EditText
-        android:id="@+id/tmp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@+id/inputNumber"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+    <!--<EditText-->
+        <!--android:id="@+id/tmp"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:ems="10"-->
+        <!--android:inputType="textPersonName"-->
+        <!--android:text="Name"-->
+        <!--android:layout_marginTop="7dp"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/inputNumber"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
 
 </android.support.constraint.ConstraintLayout>
