--- a/app/src/main/res/layout/tab1contacts.xml
+++ b/app/src/main/res/layout/tab1contacts.xml
@@ -55,7 +55,7 @@
                     android:text="CALL" />
 
                 <Button
-                    android:id="@+id/infoButton"
+                    android:id="@+id/editButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -63,7 +63,7 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:background="#2196F3"
                     android:textColor="#FFFFFF"
-                    android:text="INFO" />
+                    android:text="EDIT" />
 
             </LinearLayout>
 
