--- a/app/src/main/res/layout/tab1contacts.xml
+++ b/app/src/main/res/layout/tab1contacts.xml
@@ -32,7 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:background="@android:color/transparent"/>
 
         <RelativeLayout
             android:layout_width="wrap_content"
