--- a/app/src/main/res/layout/tab2gallery.xml
+++ b/app/src/main/res/layout/tab2gallery.xml
@@ -78,9 +78,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:progress="3"
-            android:max="5"
-            android:min="1"/>
+            android:progress="2"
+            android:max="4"/>
         <TextView
             android:id="@+id/gall_seekcnt"
             android:layout_width="wrap_content"
