--- a/app/src/main/res/drawable-hdpi/game_shape_1.xml
+++ b/app/src/main/res/drawable-hdpi/game_shape_1.xml
@@ -1,20 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
 
-    <corners
-        android:radius="0.5dp"
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"
-        android:topLeftRadius="100dp"
-        android:topRightRadius="5dp" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#FF0000" />
+    <item android:state_pressed="false">
+        <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+            <item>
+                <shape xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:shape="rectangle"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
 
-    <stroke
-        android:width="1dp"
-        android:color="#000000" />
+                    <corners
+                        android:radius="@dimen/default_radius"
+                        android:bottomLeftRadius="@dimen/other_border"
+                        android:bottomRightRadius="@dimen/other_border"
+                        android:topLeftRadius="@dimen/edge_border"
+                        android:topRightRadius="@dimen/other_border" />
 
-</shape>
+                    <solid android:color="@color/lightGray" />
+
+                </shape>
+            </item>
+
+            <item android:bottom="@dimen/shadow_offset" android:right="@dimen/shadow_offset">
+                <shape xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:shape="rectangle"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
+
+                    <corners
+                        android:radius="@dimen/default_radius"
+                        android:bottomLeftRadius="@dimen/other_border"
+                        android:bottomRightRadius="@dimen/other_border"
+                        android:topLeftRadius="@dimen/edge_border"
+                        android:topRightRadius="@dimen/other_border" />
+
+                    <solid android:color="#FF0000" />
+
+                </shape>
+            </item>
+        </layer-list>
+    </item>
+
+    <item android:state_pressed="true">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent">
+
+            <corners
+                android:radius="@dimen/default_radius"
+                android:bottomLeftRadius="@dimen/other_border"
+                android:bottomRightRadius="@dimen/other_border"
+                android:topLeftRadius="@dimen/edge_border"
+                android:topRightRadius="@dimen/other_border" />
+
+            <solid android:color="#FF0000" />
+
+        </shape>
+    </item>
+
+</selector>
