--- a/app/src/main/res/layout/content_add_contact.xml
+++ b/app/src/main/res/layout/content_add_contact.xml
@@ -50,7 +50,7 @@
         app:layout_constraintRight_toLeftOf="@+id/submit"
         app:layout_constraintTop_toTopOf="parent"
         style="?android:attr/borderlessButtonStyle"
-        android:background="@color/greyButton"/>
+        android:background="@color/lightGray"/>
 
     <Button
         android:id="@+id/submit"
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toTopOf="@+id/cancel"
         app:layout_constraintVertical_bias="0.0"
         style="?android:attr/borderlessButtonStyle"
-        android:background="@color/greyButton"/>
+        android:background="@color/lightGray"/>
 
     <!--<EditText-->
         <!--android:id="@+id/tmp"-->
