--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,11 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+
+    <!--Dimensions for Tab3Game-->
+    <dimen name="edge_border">100dp</dimen>
+    <dimen name="other_border">1dp</dimen>
+    <dimen name="default_radius">0.5dp</dimen>
+    <dimen name="stroke">3dp</dimen>
+    <dimen name="shadow_offset">3dp</dimen>
 </resources>
