--- a/app/src/main/res/layout/tab2gallery.xml
+++ b/app/src/main/res/layout/tab2gallery.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,57 +9,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.q.project1.MainActivity$SectionsPagerAdapter">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/seekArea"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="5dp"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@android:color/white" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/seekArea"
         android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/gall_img_temp_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:maxHeight="200dp"
-            android:scaleType="fitCenter"
-            android:visibility="gone" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/btnLoadImg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/loadImg" />
-
-            <Button
-                android:id="@+id/btnSaveImg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/saveImg"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/btnClearImg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/clearImg"
-                android:visibility="gone" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
 
         <GridView
             android:id="@+id/galleryGridView"
@@ -70,21 +34,26 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/seekArea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="10dp">
+
         <SeekBar
             android:id="@+id/gall_seekbar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:progress="2"
-            android:max="4"/>
+            android:max="4"
+            android:progress="2" />
+
         <TextView
             android:id="@+id/gall_seekcnt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/seek_num"/>
+            android:text="@string/seek_num" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
