--- a/app/src/main/res/drawable-hdpi/game_shape_3.xml
+++ b/app/src/main/res/drawable-hdpi/game_shape_3.xml
@@ -43,21 +43,50 @@
     </item>
 
     <item android:state_pressed="true">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
+        <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+            <item>
+                <shape xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:shape="rectangle"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
 
-            <corners
-                android:radius="@dimen/default_radius"
-                android:bottomLeftRadius="@dimen/edge_border"
-                android:bottomRightRadius="@dimen/other_border"
-                android:topLeftRadius="@dimen/other_border"
-                android:topRightRadius="@dimen/other_border" />
+                    <corners
+                        android:radius="@dimen/default_radius"
+                        android:bottomLeftRadius="@dimen/edge_border"
+                        android:bottomRightRadius="@dimen/other_border"
+                        android:topLeftRadius="@dimen/other_border"
+                        android:topRightRadius="@dimen/other_border" />
 
-            <solid android:color="#0000FF" />
+                    <solid android:color="@color/lightGray" />
 
-        </shape>
+                </shape>
+            </item>
+
+            <item android:bottom="@dimen/shadow_offset" android:right="@dimen/shadow_offset">
+                <shape xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:shape="rectangle"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
+
+                    <corners
+                        android:radius="@dimen/default_radius"
+                        android:bottomLeftRadius="@dimen/edge_border"
+                        android:bottomRightRadius="@dimen/other_border"
+                        android:topLeftRadius="@dimen/other_border"
+                        android:topRightRadius="@dimen/other_border" />
+
+                    <gradient
+                        android:gradientRadius="150"
+                        android:centerX="55%"
+                        android:centerY="45%"
+                        android:centerColor="#FFFFFF"
+                        android:startColor="#0000FF"
+                        android:endColor="#0000FF"
+                        android:type="radial" />
+
+                </shape>
+            </item>
+        </layer-list>
     </item>
 
 </selector>
