--- a/app/src/main/res/layout/tab3game.xml
+++ b/app/src/main/res/layout/tab3game.xml
@@ -13,7 +13,11 @@
         android:id="@+id/stageTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="START" />
+        android:text=""
+        android:textAlignment="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        style="@style/TextAppearance.AppCompat.Large"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,13 +34,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
 
         <Button
             android:id="@+id/startButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="START" />
+            android:text="START"
+            style="@style/Widget.AppCompat.Button.Colored"/>
 
     </LinearLayout>
 
