--- a/app/src/main/res/layout/tab3game.xml
+++ b/app/src/main/res/layout/tab3game.xml
@@ -13,16 +13,17 @@
         android:id="@+id/stageTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
         android:textAlignment="center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:text="SIMON!"
         style="@style/TextAppearance.AppCompat.Large"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="10dp"
+        android:id="@+id/gridViewLinearLayout">
 
         <GridView
             android:id="@+id/gameGridView"
@@ -41,7 +42,7 @@
             android:id="@+id/startButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="START"
+            android:text="PLAY"
             style="@style/Widget.AppCompat.Button.Colored"/>
 
     </LinearLayout>
